security: remove unnecessary files and improve gitignore
- remove default popup.tsx (template file)
- remove .prettierrc.mjs (not needed)
- remove github workflow with secrets reference
- strengthen .gitignore to block env files and secrets

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,18 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
+.env
 .env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# secrets and keys
+*.key
+*.secret
+secrets/
+.secrets
 
 out/
 build/
